--- a/tests/auto/quick/nokeywords/CMakeLists.txt
+++ b/tests/auto/quick/nokeywords/CMakeLists.txt
@@ -20,3 +20,8 @@ qt_add_test(tst_nokeywords
 
 ## Scopes:
 #####################################################################
+
+qt_extend_target(tst_nokeywords CONDITION QT_FEATURE_opengl
+    LIBRARIES
+        Qt::OpenGLPrivate
+)
