--- a/src/imports/models/CMakeLists.txt
+++ b/src/imports/models/CMakeLists.txt
@@ -5,7 +5,6 @@
 #####################################################################
 
 qt_add_qml_module(modelsplugin
-    TARGET_PATH "QtQml/Models.2"
     URI "QtQml.Models"
     VERSION "2.15"
     DESIGNER_SUPPORTED
@@ -24,4 +23,4 @@ qt_add_qml_module(modelsplugin
 #### Keys ignored in scope 1:.:.:models.pro:<TRUE>:
 # CXX_MODULE = "qml"
 # IMPORT_VERSION = "2.15"
-# TARGETPATH = "QtQml/Models.2"
+# TARGETPATH = "QtQml/Models"
