--- a/src/imports/qtquick2/CMakeLists.txt
+++ b/src/imports/qtquick2/CMakeLists.txt
@@ -5,7 +5,6 @@
 #####################################################################
 
 qt_add_qml_module(qtquick2plugin
-    TARGET_PATH "QtQuick.2"
     URI "QtQuick"
     VERSION "2.15"
     DESIGNER_SUPPORTED
@@ -30,7 +29,7 @@ qt_add_qml_module(qtquick2plugin
 #### Keys ignored in scope 1:.:.:qtquick2.pro:<TRUE>:
 # CXX_MODULE = "qml"
 # IMPORT_VERSION = "2.15"
-# TARGETPATH = "QtQuick.2"
+# TARGETPATH = "QtQuick"
 
 ## Scopes:
 #####################################################################
