--- a/src/imports/workerscript/CMakeLists.txt
+++ b/src/imports/workerscript/CMakeLists.txt
@@ -5,7 +5,6 @@
 #####################################################################
 
 qt_add_qml_module(workerscriptplugin
-    TARGET_PATH "QtQml/WorkerScript.2"
     URI "QtQml.WorkerScript"
     VERSION "2.15"
     DESIGNER_SUPPORTED
@@ -24,4 +23,4 @@ qt_add_qml_module(workerscriptplugin
 #### Keys ignored in scope 1:.:.:workerscript.pro:<TRUE>:
 # CXX_MODULE = "qml"
 # IMPORT_VERSION = "2.15"
-# TARGETPATH = "QtQml/WorkerScript.2"
+# TARGETPATH = "QtQml/WorkerScript"
