--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ project(QtDeclarative
     LANGUAGES CXX C
 )
 
-find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Widgets Network OpenGL # special case
-                                           OPTIONAL_COMPONENTS Sql Concurrent Test) # special case
+find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Widgets Network # special case
+                                           OPTIONAL_COMPONENTS OpenGL Sql Concurrent Test) # special case
 
 # export QT6_ADD_QML_MODULE to this project
 include(src/qml/Qt6QmlMacros.cmake)
