--- a/.qmake.conf
+++ b/.qmake.conf
@@ -1,7 +1,7 @@
 load(qt_build_config)
 CONFIG += warning_clean
 
-DEFINES += QT_NO_FOREACH QT_NO_JAVA_STYLE_ITERATORS QT_NO_LINKED_LIST
+DEFINES += QT_NO_FOREACH QT_NO_JAVA_STYLE_ITERATORS
 
 QQC2_SOURCE_TREE = $$PWD
 
