Fix qmlplugindump test
Change-Id: I11a315cae0a89f17d42e8000cd4ef4a21296737e
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tests/auto/qml/qmlplugindump/data/dumper/Imports/CMakeLists.txt
+++ b/tests/auto/qml/qmlplugindump/data/dumper/Imports/CMakeLists.txt
@@ -30,7 +30,7 @@ qt_add_cmake_library(Imports
 qt_autogen_tools_initial_setup(Imports)
 # special case begin
 get_target_property(binary_dir Imports BINARY_DIR)
-file(COPY qmldir plugins.qmltypes CompositeImports.qml
+file(COPY qmldir plugins.qmltypes CompositeImports.qml Derived.qml
     DESTINATION ${binary_dir}
 )
 # special case end
