--- a/tests/auto/quicktest/testfiltering/test/CMakeLists.txt
+++ b/tests/auto/quicktest/testfiltering/test/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 qt_add_test(tst_testfiltering
     OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../"
+    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../" # special case
     SOURCES
         ../tst_testfiltering.cpp
     PUBLIC_LIBRARIES
