--- a/src/imports/CMakeLists.txt
+++ b/src/imports/CMakeLists.txt
@@ -24,6 +24,8 @@ if(TARGET Qt::Quick)
     add_subdirectory(layouts)
     add_subdirectory(qtquick2)
     add_subdirectory(window)
+endif()
+if(QT_FEATURE_quick_shadereffect AND TARGET Qt::Quick)
     add_subdirectory(wavefrontmesh)
 endif()
 if(TARGET Qt::Quick AND TARGET Qt::Test)
