--- a/src/imports/particles/CMakeLists.txt
+++ b/src/imports/particles/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 qt_add_qml_module(particlesplugin
     URI "QtQuick.Particles"
-    VERSION "2.15"
+    VERSION "${CMAKE_PROJECT_VERSION}"
     CLASSNAME QtQuick2ParticlesPlugin
     SKIP_TYPE_REGISTRATION
     SOURCES
@@ -21,5 +21,5 @@ qt_add_qml_module(particlesplugin
 
 #### Keys ignored in scope 1:.:.:particles.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "2.15"
+# QML_IMPORT_VERSION = "$$QT_VERSION"
 # TARGETPATH = "QtQuick/Particles"
