--- a/src/imports/statemachine/CMakeLists.txt
+++ b/src/imports/statemachine/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 qt_add_qml_module(qtqmlstatemachine
     URI "QtQml.StateMachine"
-    VERSION "1.15"
+    VERSION "${CMAKE_PROJECT_VERSION}"
     CLASSNAME QtQmlStateMachinePlugin
     SKIP_TYPE_REGISTRATION
     GENERATE_QMLTYPES
@@ -26,5 +26,5 @@ qt_add_qml_module(qtqmlstatemachine
 
 #### Keys ignored in scope 1:.:.:statemachine.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "1.15"
+# QML_IMPORT_VERSION = "$$QT_VERSION"
 # TARGETPATH = "QtQml/StateMachine"
