--- a/src/imports/wavefrontmesh/CMakeLists.txt
+++ b/src/imports/wavefrontmesh/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 qt_add_qml_module(qmlwavefrontmeshplugin
     URI "Qt.labs.wavefrontmesh"
-    VERSION "1.15"
+    VERSION "${CMAKE_PROJECT_VERSION}"
     CLASSNAME QmlWavefrontMeshPlugin
     SKIP_TYPE_REGISTRATION
     GENERATE_QMLTYPES
@@ -21,5 +21,5 @@ qt_add_qml_module(qmlwavefrontmeshplugin
 
 #### Keys ignored in scope 1:.:.:wavefrontmesh.pro:<TRUE>:
 # CXX_MODULE = "qml"
-# IMPORT_VERSION = "1.15"
+# QML_IMPORT_VERSION = "$$QT_VERSION"
 # TARGETPATH = "Qt/labs/wavefrontmesh"
