--- a/src/plugins/qmltooling/CMakeLists.txt
+++ b/src/plugins/qmltooling/CMakeLists.txt
@@ -19,6 +19,6 @@ if(TARGET Qt::Quick)
     add_subdirectory(qmldbg_inspector)
     add_subdirectory(qmldbg_quickprofiler)
 endif()
-if(QT_FEATURE_qml_network AND TARGET Qt::Quick)
+if(QT_FEATURE_qml_network AND QT_FEATURE_settings AND TARGET Qt::Quick)
     add_subdirectory(qmldbg_preview)
 endif()
