--- a/tests/auto/quick/pointerhandlers/CMakeLists.txt
+++ b/tests/auto/quick/pointerhandlers/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 if(QT_FEATURE_private_tests)
     add_subdirectory(flickableinterop)
+    add_subdirectory(mousearea_interop)
     add_subdirectory(multipointtoucharea_interop)
     add_subdirectory(qquickdraghandler)
     add_subdirectory(qquickhoverhandler)
