--- a/tests/benchmarks/qml/painting/CMakeLists.txt
+++ b/tests/benchmarks/qml/painting/CMakeLists.txt
@@ -10,6 +10,7 @@ qt_add_benchmark(painting
     PUBLIC_LIBRARIES
         Qt::Gui
         Qt::OpenGL
+        Qt::OpenGLWidgets
         Qt::Widgets
 )
 
