--- a/tests/auto/qml/qmlformat/CMakeLists.txt
+++ b/tests/auto/qml/qmlformat/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from qqmlproperty.pro.
+# Generated from qmlformat.pro.
 
 #####################################################################
-## tst_qqmlproperty Test:
+## tst_qmlformat Test:
 #####################################################################
 
 # Collect test data
@@ -10,42 +10,28 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_qqmlproperty
+qt_add_test(tst_qmlformat
     SOURCES
         ../../shared/util.cpp ../../shared/util.h
-        interfaces.h
-        tst_qqmlproperty.cpp
+        tst_qmlformat.cpp
+    DEFINES
+        SRCDIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}\\\"
     INCLUDE_DIRECTORIES
         ../../shared
     PUBLIC_LIBRARIES
-        Qt::CorePrivate
         Qt::Gui
-        Qt::GuiPrivate
-        Qt::QmlPrivate
     TESTDATA ${test_data}
 )
-
-#### Keys ignored in scope 1:.:.:qqmlproperty.pro:<TRUE>:
-# QML_IMPORT_NAME = "io.qt.bugreports"
-# QML_IMPORT_VERSION = "2.0"
 
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_qqmlproperty CONDITION ANDROID OR APPLE_IOS
+qt_extend_target(tst_qmlformat CONDITION ANDROID OR APPLE_IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_qqmlproperty CONDITION NOT ANDROID AND NOT APPLE_IOS
+qt_extend_target(tst_qmlformat CONDITION NOT ANDROID AND NOT APPLE_IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
-
-set_target_properties(tst_qqmlproperty PROPERTIES
-    QT_QML_MODULE_INSTALL_QMLTYPES TRUE
-    QT_QML_MODULE_VERSION 2.0
-    QT_QML_MODULE_URI io.qt.bugreports
-)
-
-qt6_qml_type_registration(tst_qqmlproperty)
