--- a/tests/benchmarks/CMakeLists.txt
+++ b/tests/benchmarks/CMakeLists.txt
@@ -2,6 +2,6 @@
 
 add_subdirectory(qml)
 add_subdirectory(quick)
-if(QT_FEATURE_opengles2 OR QT_FEATURE_opengles3 OR (QT_FEATURE_opengl AND QT_FEATURE_private_tests))
+if(QT_FEATURE_private_tests AND (QT_FEATURE_opengl OR QT_FEATURE_opengles2 OR QT_FEATURE_opengles3))
     add_subdirectory(particles)
 endif()
