--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,6 +4,7 @@
 if(QT_FEATURE_qml_devtools)
     add_subdirectory(qmllint)
     add_subdirectory(qmlimportscanner)
+    add_subdirectory(qmlformat)
     # special case: Do not build qmlcachegen here but build it at src/
     # time, so that we can use it for our own .qml files in src/imports.
 endif()
