CMake: Regenerate projects
Change-Id: Ifd6b2289de6465a010f5f2a32789221767b4d5be
Reviewed-by: Leander Beernaert <leander.beernaert@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/quickcontrols2/texteditor/CMakeLists.txt
+++ b/examples/quickcontrols2/texteditor/CMakeLists.txt
@@ -52,7 +52,7 @@ if(TARGET Qt::Widgets)
     )
 endif()
 
-if(cross_compile)
+if(CMAKE_CROSSCOMPILING)
     target_compile_definitions(texteditor PUBLIC
         QT_EXTRA_FILE_SELECTOR=\\\"touch\\\"
     )
