--- a/tests/auto/accessibility/CMakeLists.txt
+++ b/tests/auto/accessibility/CMakeLists.txt
@@ -18,19 +18,15 @@ qt_add_test(tst_accessibility
         tst_accessibility.cpp
     DEFINES
         QQC2_IMPORT_PATH=\\\"${CMAKE_CURRENT_SOURCE_DIR}/../../../src/imports\\\"
-    LIBRARIES
+    PUBLIC_LIBRARIES
         Qt::CorePrivate
+        Qt::Gui
         Qt::GuiPrivate
         Qt::QmlPrivate
+        Qt::QuickControls2
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
-    PUBLIC_LIBRARIES
-        Qt::Gui
-        Qt::Qml
-        Qt::Quick
-        Qt::QuickControls2
-        Qt::QuickTemplates2
     TESTDATA ${test_data}
 )
 
@@ -40,12 +36,12 @@ qt_add_test(tst_accessibility
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_accessibility CONDITION ANDROID OR APPLE_IOS
+qt_extend_target(tst_accessibility CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_accessibility CONDITION NOT ANDROID AND NOT APPLE_IOS
+qt_extend_target(tst_accessibility CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
