--- a/tests/auto/qquickstyle/CMakeLists.txt
+++ b/tests/auto/qquickstyle/CMakeLists.txt
@@ -21,17 +21,16 @@ qt_add_test(tst_qquickstyle
     LIBRARIES
         Qt::CorePrivate
         Qt::GuiPrivate
-        Qt::QmlPrivate
         Qt::QuickControls2Private
+    PUBLIC_LIBRARIES
+        Qt::CorePrivate
+        Qt::Gui
+        Qt::GuiPrivate
+        Qt::QmlPrivate
+        Qt::QuickControls2
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
-    PUBLIC_LIBRARIES
-        Qt::Gui
-        Qt::Qml
-        Qt::Quick
-        Qt::QuickControls2
-        Qt::QuickTemplates2
     TESTDATA ${test_data}
 )
 
@@ -101,12 +100,12 @@ qt_add_resource(tst_qquickstyle "qmake_qrcStyles4"
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_qquickstyle CONDITION ANDROID OR APPLE_IOS
+qt_extend_target(tst_qquickstyle CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_qquickstyle CONDITION NOT ANDROID AND NOT APPLE_IOS
+qt_extend_target(tst_qquickstyle CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
