--- a/src/imports/controls/imagine/CMakeLists.txt
+++ b/src/imports/controls/imagine/CMakeLists.txt
@@ -81,6 +81,7 @@ set(qml_files
     "Drawer.qml"
     "Frame.qml"
     "GroupBox.qml"
+    "HorizontalHeaderView.qml"
     "ItemDelegate.qml"
     "Label.qml"
     "Menu.qml"
@@ -114,6 +115,151 @@ set(qml_files
     "ToolSeparator.qml"
     "ToolTip.qml"
     "Tumbler.qml"
+    "VerticalHeaderView.qml"
+)
+set_source_files_properties(ApplicationWindow.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(BusyIndicator.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Button.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(CheckBox.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(CheckDelegate.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ComboBox.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(DelayButton.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Dial.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Dialog.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(DialogButtonBox.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Drawer.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Frame.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(GroupBox.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(HorizontalHeaderView.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ItemDelegate.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Label.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Menu.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(MenuItem.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(MenuSeparator.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(PageIndicator.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Page.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Pane.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Popup.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ProgressBar.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(RadioButton.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(RadioDelegate.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(RangeSlider.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(RoundButton.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ScrollBar.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ScrollIndicator.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Slider.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(SpinBox.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(SplitView.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(StackView.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(SwipeDelegate.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(SwipeView.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Switch.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(SwitchDelegate.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(TextField.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(TextArea.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(TabBar.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(TabButton.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ToolBar.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ToolButton.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ToolSeparator.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(ToolTip.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(Tumbler.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
+)
+set_source_files_properties(VerticalHeaderView.qml PROPERTIES
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
 )
 
 qt6_target_qml_files(qtquickcontrols2imaginestyleplugin
