--- a/src/quicktemplates2/CMakeLists.txt
+++ b/src/quicktemplates2/CMakeLists.txt
@@ -37,6 +37,8 @@ qt_add_module(QuickTemplates2
         qquickframe.cpp qquickframe_p.h
         qquickframe_p_p.h
         qquickgroupbox.cpp qquickgroupbox_p.h
+        qquickheaderview.cpp qquickheaderview_p.h
+        qquickheaderview_p_p.h
         qquickicon.cpp qquickicon_p.h
         qquickitemdelegate.cpp qquickitemdelegate_p.h
         qquickitemdelegate_p_p.h
@@ -138,6 +140,8 @@ qt_extend_target(QuickTemplates2 CONDITION TARGET Qt::QmlModels
         Qt::QmlModelsPrivate
     PUBLIC_LIBRARIES
         Qt::QmlModels
+    PRIVATE_MODULE_INTERFACE
+        Qt::QmlModelsPrivate
 )
 
 qt_extend_target(QuickTemplates2 CONDITION QT_FEATURE_quick_listview AND QT_FEATURE_quick_pathview
