--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,7 @@
 # Generated from tests.pro.
 
-if(NOT TARGET Qt::Test)
-    cmake_minimum_required(VERSION 3.15.0)
-    project(QtQuickControls2Tests VERSION 6.0.0 LANGUAGES C CXX)
-    find_package(Qt6 ${PROJECT_VERSION} REQUIRED COMPONENTS
-        BuildInternals Core Qml Quick QmlDevTools QmlDebug QuickTest # special case
-        QuickControls2  QuickTemplates2 # special case
-    )
-    qt_set_up_standalone_tests_build()
+if(QT_BUILD_STANDALONE_TESTS)
+    # Add qt_find_package calls for extra dependencies that need to be found when building
+    # the standalone tests here.
 endif()
 qt_build_tests()
-
