--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(pressandhold)
 add_subdirectory(qquickapplicationwindow)
 add_subdirectory(qquickcolor)
 add_subdirectory(qquickdrawer)
+add_subdirectory(qquickheaderview)
 add_subdirectory(qquickiconimage)
 add_subdirectory(qquickiconlabel)
 add_subdirectory(qquickimaginestyle)
@@ -30,3 +31,4 @@ add_subdirectory(qquickuniversalstyleconf)
 add_subdirectory(revisions)
 add_subdirectory(sanity)
 add_subdirectory(snippets)
+add_subdirectory(translation)
