--- a/tests/auto/qquickapplicationwindow/CMakeLists.txt
+++ b/tests/auto/qquickapplicationwindow/CMakeLists.txt
@@ -18,20 +18,16 @@ qt_add_test(tst_qquickapplicationwindow
         tst_qquickapplicationwindow.cpp
     DEFINES
         QQC2_IMPORT_PATH=\\\"${CMAKE_CURRENT_SOURCE_DIR}/../../../src/imports\\\"
-    LIBRARIES
+    PUBLIC_LIBRARIES
         Qt::CorePrivate
+        Qt::Gui
         Qt::GuiPrivate
         Qt::QmlPrivate
+        Qt::QuickControls2
         Qt::QuickControls2Private
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
-    PUBLIC_LIBRARIES
-        Qt::Gui
-        Qt::Qml
-        Qt::Quick
-        Qt::QuickControls2
-        Qt::QuickTemplates2
     TESTDATA ${test_data}
 )
 
@@ -41,12 +37,12 @@ qt_add_test(tst_qquickapplicationwindow
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_qquickapplicationwindow CONDITION ANDROID OR APPLE_IOS
+qt_extend_target(tst_qquickapplicationwindow CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_qquickapplicationwindow CONDITION NOT ANDROID AND NOT APPLE_IOS
+qt_extend_target(tst_qquickapplicationwindow CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
