--- a/tests/auto/qquickninepatchimage/CMakeLists.txt
+++ b/tests/auto/qquickninepatchimage/CMakeLists.txt
@@ -23,31 +23,32 @@ qt_add_test(tst_qquickninepatchimage
     DEFINES
         QQC2_IMPORT_PATH=\\\"${CMAKE_CURRENT_SOURCE_DIR}/../../../src/imports\\\"
     LIBRARIES
-        Qt::CorePrivate
         Qt::GuiPrivate
-        Qt::QmlPrivate
         Qt::QuickControls2Private
+        Qt::QuickPrivate
+    PUBLIC_LIBRARIES
+        Qt::CorePrivate
+        Qt::Gui
+        Qt::GuiPrivate
+        Qt::Qml
+        Qt::QmlPrivate
+        Qt::Quick
+        Qt::QuickControls2
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
-    PUBLIC_LIBRARIES
-        Qt::Gui
-        Qt::Qml
-        Qt::Quick
-        Qt::QuickControls2
-        Qt::QuickTemplates2
     TESTDATA ${test_data}
 )
 
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_qquickninepatchimage CONDITION ANDROID OR APPLE_IOS
+qt_extend_target(tst_qquickninepatchimage CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_qquickninepatchimage CONDITION NOT ANDROID AND NOT APPLE_IOS
+qt_extend_target(tst_qquickninepatchimage CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
