--- a/tests/auto/sanity/CMakeLists.txt
+++ b/tests/auto/sanity/CMakeLists.txt
@@ -12,19 +12,16 @@ qt_add_test(tst_sanity
         tst_sanity.cpp
     DEFINES
         QQC2_IMPORT_PATH=\\\"${CMAKE_CURRENT_SOURCE_DIR}/../../../src/imports\\\"
-    LIBRARIES
+    PUBLIC_LIBRARIES
         Qt::CorePrivate
+        Qt::Gui
         Qt::GuiPrivate
+        Qt::Qml
         Qt::QmlPrivate
+        Qt::QuickControls2
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
-    PUBLIC_LIBRARIES
-        Qt::Gui
-        Qt::Qml
-        Qt::Quick
-        Qt::QuickControls2
-        Qt::QuickTemplates2
 )
 
 #### Keys ignored in scope 1:.:.:sanity.pro:<TRUE>:
@@ -34,12 +31,12 @@ qt_add_test(tst_sanity
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_sanity CONDITION ANDROID OR APPLE_IOS
+qt_extend_target(tst_sanity CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_sanity CONDITION NOT ANDROID AND NOT APPLE_IOS
+qt_extend_target(tst_sanity CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
