--- a/tests/benchmarks/creationtime/CMakeLists.txt
+++ b/tests/benchmarks/creationtime/CMakeLists.txt
@@ -12,19 +12,16 @@ qt_add_test(tst_creationtime
         tst_creationtime.cpp
     DEFINES
         QQC2_IMPORT_PATH=\\\"${CMAKE_CURRENT_SOURCE_DIR}/../../../src/imports\\\"
-    LIBRARIES
+    PUBLIC_LIBRARIES
         Qt::CorePrivate
+        Qt::Gui
         Qt::GuiPrivate
+        Qt::Qml
         Qt::QmlPrivate
+        Qt::QuickControls2
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
         Qt::TestPrivate
-    PUBLIC_LIBRARIES
-        Qt::Gui
-        Qt::Qml
-        Qt::Quick
-        Qt::QuickControls2
-        Qt::QuickTemplates2
 )
 
 #### Keys ignored in scope 1:.:.:creationtime.pro:<TRUE>:
@@ -33,12 +30,12 @@ qt_add_test(tst_creationtime
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_creationtime CONDITION ANDROID OR APPLE_IOS
+qt_extend_target(tst_creationtime CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_creationtime CONDITION NOT ANDROID AND NOT APPLE_IOS
+qt_extend_target(tst_creationtime CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
