CMake: Fix painting benchmark dependency on OpenGLWidgets
Change-Id: Ic7ed89c51e9a3cabda60ec99702b3aacd2cf5e97
Reviewed-by: Leander Beernaert <leander.beernaert@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tests/benchmarks/qml/CMakeLists.txt
+++ b/tests/benchmarks/qml/CMakeLists.txt
@@ -12,6 +12,8 @@ add_subdirectory(script)
 add_subdirectory(js)
 add_subdirectory(creation)
 if(TARGET Qt::OpenGL)
-    add_subdirectory(painting)
     add_subdirectory(qquickwindow)
+endif()
+if(TARGET Qt::OpenGL AND TARGET Qt::OpenGLWidgets)
+    add_subdirectory(painting)
 endif()
