--- a/tests/benchmarks/qml/painting/CMakeLists.txt
+++ b/tests/benchmarks/qml/painting/CMakeLists.txt
@@ -15,7 +15,7 @@ qt_add_benchmark(painting
 )
 
 #### Keys ignored in scope 1:.:.:painting.pro:<TRUE>:
-# _REQUIREMENTS = "qtHaveModule(opengl)" "qtHaveModule(widgets)"
+# _REQUIREMENTS = "qtHaveModule(opengl)" "qtHaveModule(openglwidgets)" "qtHaveModule(widgets)"
 
 ## Scopes:
 #####################################################################
