CMake: Remove testlogger.js from qmldir
Install it, without adding it as entry to the generated qmldir
file.

Change-Id: I0b63d4069767e2ad21afcf94741212d14ceb2745
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/src/imports/testlib/CMakeLists.txt
+++ b/src/imports/testlib/CMakeLists.txt
@@ -46,7 +46,7 @@ set_source_files_properties(SignalSpy.qml PROPERTIES
     QT_QML_SOURCE_VERSION "1.0"
 )
 set_source_files_properties(testlogger.js PROPERTIES
-    QT_QML_SOURCE_VERSION "1.0"
+    QT_QML_SKIP_QMLDIR_ENTRY TRUE
 )
 
 qt6_target_qml_files(qmltestplugin
