Add special case for escaping quotes
<command-line>: warning: missing terminating " character
<command-line>: error: stray ‘\’ in program

Change-Id: Iab23419a707a105a9789b8d7af3740e320d54119
Reviewed-by: Leander Beernaert <leander.beernaert@qt.io>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/examples/quickcontrols2/texteditor/CMakeLists.txt
+++ b/examples/quickcontrols2/texteditor/CMakeLists.txt
@@ -54,7 +54,7 @@ endif()
 
 if(CMAKE_CROSSCOMPILING)
     target_compile_definitions(texteditor PUBLIC
-        QT_EXTRA_FILE_SELECTOR=\\\"touch\\\"
+        QT_EXTRA_FILE_SELECTOR="touch" # special case
     )
 endif()
 
